crates/repovec-core/src/appliance/qdrant_quadlet/log_tests/snapshots/repovec_core__appliance__qdrant_quadlet__log_tests__malformed_storage_mount.snap
---
source: crates/repovec-core/src/appliance/qdrant_quadlet/log_tests/mod.rs
assertion_line: 221
expression: events
---
[
    CapturedEvent {
        level: Level(
            Info,
        ),
        target: "repovec_core::qdrant_quadlet",
        fields: {
            "message": "validating qdrant quadlet contract",
        },
    },
    CapturedEvent {
        level: Level(
            Warn,
        ),
        target: "repovec_core::qdrant_quadlet",
        fields: {
            "expected_source": "/var/lib/repovec/qdrant-storage",
            "expected_target": "/qdrant/storage",
            "message": "qdrant quadlet validation failed: missing storage mount",
            "volume": "/var/lib/repovec/qdrant-storage",
        },
    },
]
