crates/repovec-core/src/appliance/qdrant_quadlet/log_tests/snapshots/repovec_core__appliance__qdrant_quadlet__log_tests__missing_auto_update.snap
---
source: crates/repovec-core/src/appliance/qdrant_quadlet/log_tests/mod.rs
expression: events
---
[
    CapturedEvent {
        level: Level(
            Info,
        ),
        target: "repovec_core::qdrant_quadlet",
        fields: {
            "message": "validating qdrant quadlet contract",
        },
    },
    CapturedEvent {
        level: Level(
            Warn,
        ),
        target: "repovec_core::qdrant_quadlet",
        fields: {
            "expected_auto_update": "registry",
            "message": "qdrant quadlet validation failed: missing auto-update policy",
        },
    },
]
